Login de usuario

--- a/src/app/body/records/records.component.html
+++ b/src/app/body/records/records.component.html
@@ -32,7 +32,7 @@
                     {{record.cards}}
                 </div>
                 <div class="row">
-                    {{record.recordDate | date}}
+                    {{record.recordDate | date: 'dd/MM/yyyy'}}
                 </div>
             </div>
         </div>
