Obtener record usuario sin presentación

--- a/src/app/body/records/records.component.html
+++ b/src/app/body/records/records.component.html
@@ -1,40 +1,10 @@
+<div class="row">
 <div class="container box records">
     <div class="title text-center">
         <h3>Records</h3>
     </div>
     <div id="records-body" class="body text-center">
-        <div *ngFor="let record of globalRecords$ | async; let i = index" class="row record-element">
-            <div class="col-4">
-                <img class="record-position" [src]="getImage(i)" class="img-fluid record-position">
-            </div>
-            <div class="col-4 lead">
-                <div class="row ">
-                    Usuario
-                </div>
-                <div class="row">
-                    Puntuación
-                </div>
-                <div class="row">
-                    Número cartas
-                </div>
-                <div class="row">
-                    Fecha
-                </div>
-            </div>
-            <div class="col-4 lead">
-                <div class="row ">
-                    {{record.username}}
-                </div>
-                <div class="row">
-                    {{record.punctuation}}
-                </div>
-                <div class="row">
-                    {{record.cards}}
-                </div>
-                <div class="row">
-                    {{record.recordDate | date: 'dd/MM/yyyy'}}
-                </div>
-            </div>
-        </div>
+        <app-records-chart [records$]="globalRecords$"></app-records-chart>
+        <app-records-chart *ngIf="restClient.username" [records$]="personalRecords$"></app-records-chart>
     </div>
 </div>
