--- a/src/app/body/login/login.component.html
+++ b/src/app/body/login/login.component.html
@@ -23,7 +23,8 @@
                     class="text-error">*Campo
                     requerido</span>
             </div>
-            <button type="button" [disabled]="(loginForm.invalid && loginForm.dirty) || loginForm.pristine" class="btn btn-miw-secondary" (click)="login()">Iniciar
+            <button type="button" [disabled]="(loginForm.invalid && loginForm.dirty) || loginForm.pristine"
+                class="btn btn-miw-secondary" (click)="login()">Iniciar
                 sesión</button>
         </form>
     </div>
