Toast al iniciar y cerrar sesión

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -26,23 +26,27 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                <li *ngIf="!username" id="login" class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=";javascript" [routerLink]="'login'">
-                        <i class="fa fa-sign-in"></i> Iniciar sesión</a>
-                </li>
-                <li *ngIf="username" id="logout" class="nav-item">
-                    <a class="nav-link active" aria-current="page" (click)="logout()" href=";javascript">
-                        <i class="fa fa-sign-out"></i> Cerrar sesión</a>
-                </li>
+                <ng-container *ngIf="!username; else userLogged">
+                    <li id="login" class="nav-item">
+                        <a class="nav-link active" aria-current="page" href=";javascript" [routerLink]="'login'">
+                            <i class="fa fa-sign-in"></i> Iniciar sesión</a>
+                    </li>
+                    <li *ngIf="!username" id="signup" class="nav-item">
+                        <a class="nav-link active" aria-current="page" href=";javascript" [routerLink]="'signup'">
+                            <i class="fa fa-user"></i> Registro</a>
+                    </li>
 
-                <li *ngIf="!username" id="signup" class="nav-item">
-                    <a class="nav-link active" aria-current="page" href=";javascript" [routerLink]="'signup'">
-                        <i class="fa fa-user"></i> Registro</a>
-                </li>
-                <li *ngIf="username" id="username" class="nav-item">
-                    <a class="nav-link active" aria-current="page">
-                        <i class="fa fa-user"></i> {{ username }}</a>
-                </li>
+                </ng-container>
+                <ng-template #userLogged>
+                    <li id="username" class="nav-item">
+                        <a class="nav-link active" aria-current="page">
+                            <i class="fa fa-user"></i> {{ username }}</a>
+                    </li>
+                    <li id="logout" class="nav-item">
+                        <a class="nav-link active" aria-current="page" (click)="logout()" href=";javascript">
+                            <i class="fa fa-sign-out"></i> Cerrar sesión</a>
+                    </li>
+                </ng-template>
             </ul>
         </div>
     </div>
