--- a/src/app/body/play/play.component.css
+++ b/src/app/body/play/play.component.css
@@ -1,3 +1,8 @@
 .selected-card {
     box-shadow: 0 10px 20px var(--secondary);    
 }
+
+.game-info-section .btn.btn-miw-secondary {
+    margin-top: 5px;
+    width: 100%
+}
