--- a/src/app/body/play/play.component.html
+++ b/src/app/body/play/play.component.html
@@ -1,6 +1,6 @@
 <div id="play-content" class="container-fluid">
     <div class="row">
-        <div class="col-1">
+        <div class="col-xl-1 col-lg-2 ">
             <div class="container text-center miw game-info">
                 <section class="game-info-section">
                     <label class="game-info-label">Puntuación</label>
@@ -27,7 +27,7 @@
                 </ng-container>
             </div>
         </div>
-        <div class="col-10">
+        <div class="col-xl-11 col-lg-10 order-first order-md-last">
             <div id="table-top" class="container text-center">
                 <img *ngFor="let card of board; let i = index" id="img-{{i}}" class="img-fluid" draggable="false"
                     [src]="card.shown ? card.image : reversoImgPath" (click)="selectCard(i)"
