--- a/src/app/body/records/records.component.html
+++ b/src/app/body/records/records.component.html
@@ -1,10 +1,24 @@
-<div class="row">
-<div class="container box records">
-    <div class="title text-center">
-        <h3>Records</h3>
-    </div>
-    <div id="records-body" class="body text-center">
-        <app-records-chart [records$]="globalRecords$"></app-records-chart>
-        <app-records-chart *ngIf="loginService.getUsername()" [records$]="personalRecords$"></app-records-chart>
+<div class="container">
+    <div class="row">
+        <div [class]="logged ? 'col-6': 'container'">
+            <div class="box" [style.margin-right.px]="logged ? 'margin-right' : ''">
+                <div class="title text-center">
+                    <h3>Records</h3>
+                </div>
+                <div id="records-body" class="body text-center">
+                    <app-records-chart [records$]="globalRecords$"></app-records-chart>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div *ngIf="logged" class="box" style="margin-left:3px">
+                <div class="title text-center">
+                    <h3>Records Personales</h3>
+                </div>
+                <div id="records-body" class="body text-center">
+                    <app-records-chart [records$]="personalRecords$"></app-records-chart>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
