--- a/src/app/body/play/play.component.css
+++ b/src/app/body/play/play.component.css
@@ -1,5 +1,42 @@
+#play-content {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.container.game-info {
+    color: var(--text);
+    font-weight: bold;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+label.game-info-label {
+    font-size: 2vh;
+}
+
+#table-top img.img-fluid {
+    padding-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    max-width: 120px;
+    transition: transform .2s;
+    user-select: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
+#table-top img.img-fluid:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+    box-shadow: 0px 5px 20px var(--primary);
+}
+
 .selected-card {
-    box-shadow: 0 10px 20px var(--secondary);    
+    box-shadow: 0 10px 20px var(--secondary);
 }
 
 .game-info-section .btn.btn-miw-secondary {
